src/objects/Opp_RecordTypes_for_Case_Creation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Opp_RecordTypes_to_Show__c</fullName>
        <description>Enter the Opportunity RecordTypes (separated by comma) that needs to be shown when a Case is created through the Service Console.</description>
        <inlineHelpText>Enter the Opportunity RecordTypes (separated by comma) that needs to be shown when a Case is created through the Service Console.</inlineHelpText>
        <label>Opp RecordTypes to Show</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Statuses_to_show__c</fullName>
        <description>Enter the Opportunity Statuses (Separated by Comma) that needs to be shown when a case is created through the Service Console.</description>
        <inlineHelpText>Enter the Opportunity Statuses (Separated by Comma) that needs to be shown when a case is created through the Service Console.</inlineHelpText>
        <label>Opp Statuses to show</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Opps_with_Blank_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Opportunities with blank Statuses to be selectable when a Case is created through the Service Console.</description>
        <inlineHelpText>Enable Opportunities with blank Statuses to be selectable when a Case is created through the Service Console.</inlineHelpText>
        <label>Select Opps with Blank Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selectable_Opp_RecordTypes__c</fullName>
        <description>Enter the Opportunity RecordTypes (separated by comma) that needs to be selectable when a Case is created through the Service Console.</description>
        <inlineHelpText>Enter the Opportunity RecordTypes (separated by comma) that needs to be selectable when a Case is created through the Service Console.</inlineHelpText>
        <label>Selectable Opp RecordTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selectable_Opp_Statuses__c</fullName>
        <description>Enter the Opportunity Statuses (separated by comma) that needs to be selectable when a Case is created through the Service Console.</description>
        <inlineHelpText>Enter the Opportunity Statuses (separated by comma) that needs to be selectable when a Case is created through the Service Console.</inlineHelpText>
        <label>Selectable Opp Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Opps_with_Blank_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Opportunities with blank Statuses to be shown when a Case is created through the Service Console.</description>
        <inlineHelpText>Enable Opportunities with blank Statuses to be shown when a Case is created through the Service Console.</inlineHelpText>
        <label>Show Opps with Blank Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Opp RecordTypes for Case Creation</label>
</CustomObject>